--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -2,6 +2,10 @@
   height: 360px;
   .swiperItem {
     height: 100%;
+    background-color: #e0e0e0;
+    &.active {
+      transform: scale(1.5);
+    }
     .swiperItemImg {
       display: block;
       height: 100%;
